syntax = "proto3";
package zigbeealliance.distributedcomplianceledger.pki;

option go_package = "github.com/zigbee-alliance/distributed-compliance-ledger/x/pki/types";

import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "pki/grant.proto";

message ProposedCertificate {
  string subject = 1; 
  string subjectKeyId = 2; 
  string pemCert = 3; 
  string serialNumber = 4; 
  string owner = 5 [(cosmos_proto.scalar) = "cosmos.AddressString"]; 
  repeated Grant approvals = 6;
  string subjectAsText = 7; 
  repeated Grant rejects = 8;
  int32 vid = 9 [(gogoproto.moretags) = "validate:\"gte=1,lte=65535\""];
}

