syntax = "proto3";
package pki.types;

option go_package = "github.com/zigbee-alliance/distributed-compliance-ledger/x/pki/types";

message ApprovedCertificatesBySubject {
  string subject = 1; 
  repeated string subjectKeyIds = 2; 
  
}

